# FiraCodeMN

./: .gitignore  Makefile  README.md  justfile  peru.yaml  pyproject.toml  pyrightconfig.json
docker/: Dockerfile  docker-entrypoint.sh
misc/patch_set/: filter.jq  generate.sh
src/firacode/: __init__.py
src/firacode_mn/: __init__.py  __main__.py  font_info.py
src/font_patcher/: __init__.py  __main__.py  patch.py  patch_set.py
src/italic/: __init__.py
src/lib/: __init__.py  env.py
src/migu_1m/: __init__.py
tests/: conftest.py
tests/firacode_mn/: test_font_info.py
tests/font_patcher/: test_patch.py  test_patch_set.py
typings/fontforge/: __init__.pyi
typings/psMat/: __init__.pyi
