[tool.poetry]
name = "firacode_mn"
version = "0.1.0"
description = ""
authors = ["nobody <nobody@nowhere>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
peru = "^1.3.1"
opentype-feature-freezer = "^1.32.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
yapf = "^0.40.1"
isort = "^5.12.0"
pytest-mock = "^3.11.1"
toml = "^0.10.2"
pyright = "^1.1.316"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.yapf]
based_on_style = "pep8"
dedent_closing_brackets = true
coalesce_brackets = true
blank_line_before_nested_class_or_def = true
column_limit = 120

[tool.isort]
combine_as_imports = true
